feat: manual release workflow (workflow_dispatch), remove release-please

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,17 @@
 name: release
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Release version (e.g. 0.2.0)"
+        required: true
 
 permissions:
   contents: write
-  pull-requests: write
 
 jobs:
-  release-please:
-    runs-on: ubuntu-latest
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-      tag_name: ${{ steps.release.outputs.tag_name }}
-      upload_url: ${{ steps.release.outputs.upload_url }}
-    steps:
-      - uses: googleapis/release-please-action@v4
-        id: release
-        with:
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
-
-  upload-assets:
-    needs: [release-please]
-    if: ${{ needs.release-please.outputs.release_created }}
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -45,17 +31,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libsdl2-dev libmpv-dev llvm clang nsis
 
-      - name: Extract version
-        id: version
-        run: echo "version=${TAG#v}" >> "$GITHUB_OUTPUT"
-        env:
-          TAG: ${{ needs.release-please.outputs.tag_name }}
-
       - name: Build (Linux)
         run: cargo build --release
 
       - name: Package AppImage (Linux x86_64)
-        run: LV_VERSION=${{ steps.version.outputs.version }} bash pkg/appimage.sh x86_64
+        run: LV_VERSION=${{ inputs.version }} bash pkg/appimage.sh x86_64
 
       # ── Windows cross-compile ────────────────────────────────────────
       - name: Cache cargo-xwin
@@ -85,22 +65,27 @@ jobs:
           cp pkg/win64/libmpv-2.dll build-installer/
           cp pkg/installer.nsi build-installer/
           cd build-installer
-          makensis -DLV_VERSION=${{ steps.version.outputs.version }} installer.nsi
+          makensis -DLV_VERSION=${{ inputs.version }} installer.nsi
 
-      # ── Upload release assets ────────────────────────────────────────
-      - name: Upload AppImage to release
+      # ── Create release + upload assets ──────────────────────────────
+      - name: Create GitHub release
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release upload ${{ needs.release-please.outputs.tag_name }} lv-*-x86_64.AppImage
+        run: gh release create "v${{ inputs.version }}" --title "v${{ inputs.version }}" --generate-notes
 
-      - name: Upload Windows installer to release
+      - name: Upload AppImage
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release upload ${{ needs.release-please.outputs.tag_name }} build-installer/lv-setup-*.exe
+        run: gh release upload "v${{ inputs.version }}" lv-*-x86_64.AppImage
 
-      - name: Upload Windows binary to release
+      - name: Upload Windows installer
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: gh release upload "v${{ inputs.version }}" build-installer/lv-setup-*.exe
+
+      - name: Upload Windows binary
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          cp build-installer/lv-imgui.exe "lv-${{ steps.version.outputs.version }}-x86_64-windows.exe"
-          gh release upload ${{ needs.release-please.outputs.tag_name }} "lv-${{ steps.version.outputs.version }}-x86_64-windows.exe"
+          cp build-installer/lv-imgui.exe "lv-${{ inputs.version }}-x86_64-windows.exe"
+          gh release upload "v${{ inputs.version }}" "lv-${{ inputs.version }}-x86_64-windows.exe"
