ci: share rust-cache between CI and release workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
+          shared-key: "release-build"
 
       # ── Linux build ──────────────────────────────────────────────────
       - name: Install system dependencies (Linux)
