--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
+          shared-key: "release-build"
 
       # ── Linux build ──────────────────────────────────────────────────
       - name: Install system dependencies
