--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,24 +33,5 @@ jobs:
       - name: Cargo fmt
         run: cargo fmt -- --check
 
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-all-crates: "true"
-          shared-key: "release-build"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libsdl2-dev libmpv-dev
-
-      - name: Build (Linux x86_64)
-        run: cargo build --release
+      - name: Build
+        run: cargo build
