--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: release
+run-name: "Release ${{ inputs.version || 'from Cargo.toml' }}${{ inputs.prerelease == true && ' (prerelease)' || '' }}"
 
 on:
   workflow_dispatch:
