--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,8 @@ flate2 = "1"
 clap = { version = "4", features = ["derive"] }
 notify = "7"
 
+[build-dependencies]
+embed-resource = "3"
+
 [dev-dependencies]
 tempfile = "3"
