--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,13 +71,16 @@ jobs:
           packages: libsdl2-dev libmpv-dev
 
       - name: Build
-        run: cargo build --release
+        run: cargo build --release --target x86_64-unknown-linux-gnu
+
+      - name: Strip binary
+        run: strip target/x86_64-unknown-linux-gnu/release/lv
 
       - name: Package AppImage
-        run: LV_VERSION=$VERSION bash pkg/appimage.sh x86_64
+        run: LV_VERSION=$VERSION bash pkg/appimage.sh x86_64 target/x86_64-unknown-linux-gnu/release/lv
 
       - name: Package .deb
-        run: LV_VERSION=$VERSION bash pkg/deb.sh amd64
+        run: LV_VERSION=$VERSION bash pkg/deb.sh amd64 target/x86_64-unknown-linux-gnu/release/lv
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -208,10 +211,9 @@ jobs:
         run: sudo dpkg --add-architecture i386
 
       - name: Install Wine and test packages
-        uses: eclipse-score/apt-install@bd30e2e74a4850389719cb8c3e312bb26aada4e0
-        with:
-          packages: xvfb wine64 xdotool graphicsmagick-imagemagick-compat
-          apt_update: true
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb wine64 xdotool graphicsmagick-imagemagick-compat
 
       - name: Download Windows binary + DLLs
         uses: actions/download-artifact@v4
